--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -11,6 +11,7 @@
   --grey-50: #78757a;
   --green-80: #088413;
   --orange: #ff6b00;
+  --compliment: #ff8933;
   --orange-50-rgb: 255, 107, 0;
   --green-50-rgb: 55, 182, 53;
   --white: #ffffff;
