--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -12,6 +12,7 @@
   --green-80: #088413;
   --orange: #ff6b00;
   --compliment: #ff8933;
+  --light-bg: #f9f9f9;
   --orange-50-rgb: 255, 107, 0;
   --green-50-rgb: 55, 182, 53;
   --white: #ffffff;
