add placeholder padding on language button

--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -90,5 +90,7 @@ nav > a {
 }
 
 .languageButton {
-  grid-area: languageButton
+  grid-area: languageButton;
+  /* TODO: change when shop icons added */
+  padding-left: 150px;
 }
