--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -1,14 +1,18 @@
 .container {
   display: flex;
   align-items: center;
-  position: sticky;
-  z-index: 1;
+  position: fixed;
+  z-index: 10;
   top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 }
 
 .header {
   display: grid;
   width: 100%;
+  height: 100%;
   padding: var(--size-gap) var(--size-gutter);
   grid-template-columns: 100px 1fr min-content min-content;
   grid-template-areas: "logo nada language button searchButton cartButton" "navHeader navHeader navHeader navHeader";
@@ -36,30 +40,6 @@
   );
   justify-self: flex-end;
 } */
-
-@media (min-width: 768px) {
-  .header {
-    grid-template-areas: "logo navHeader languageButton searchButton cartButton";
-    grid-template-columns: 120px 1fr min-content min-content;
-  }
-  .languageButton {
-    /* TODO: change when shop icons added */
-    padding-left: 0px;
-  }
-}
-
-@media (min-width: 1024px) {
-  .header {
-    grid-template-columns: 150px 1fr min-content min-content;
-  }
-  .languageButton {
-    /* TODO: change when shop icons added */
-    padding-left: 150px;
-  }
-  nav > a {
-    margin: 0 32px;
-  }
-}
 
 .logo {
   display: flex;
@@ -110,4 +90,36 @@ nav > a {
 
 .languageButton {
   grid-area: languageButton;
+}
+
+@media (min-width: 768px) {
+  .container {
+    align-items: center;
+    position: sticky;
+    right: auto;
+    bottom: auto;
+    left: auto;
+  }
+  .header {
+    grid-template-areas: "logo navHeader languageButton searchButton cartButton";
+    grid-template-columns: 120px 1fr min-content min-content;
+    height: auto;
+  }
+  .languageButton {
+    /* TODO: change when shop icons added */
+    padding-left: 0px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .header {
+    grid-template-columns: 150px 1fr min-content min-content;
+  }
+  .languageButton {
+    /* TODO: change when shop icons added */
+    padding-left: 150px;
+  }
+  nav > a {
+    margin: 0 32px;
+  }
 }
