--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -7,7 +7,7 @@
 }
 
 .header {
-  display: grid;
+  display: none;
   position: fixed;
   top: 0;
   right: 0;
@@ -23,6 +23,9 @@
   border-bottom: 1px solid hsla(0, 0%, 93.3%, 0.5);
 }
 
+.open {
+  display: grid;
+}
 .active-link {
   text-decoration: underline;
 }
@@ -107,6 +110,7 @@ nav > a {
     position: sticky;
   }
   .header {
+    display: grid;
     position: relative;
     top: auto;
     right: auto;
