--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -14,7 +14,9 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
+  padding: var(--size-gap) var(--size-gutter);
+
   grid-template-columns: 50px 1fr min-content min-content;
   grid-template-rows: auto 1fr;
   grid-template-areas: "logo nada languageButton searchButton cartButton" "navHeader navHeader navHeader navHeader navHeader";
