--- a/src/components/header.module.css
+++ b/src/components/header.module.css
@@ -11,10 +11,9 @@
   position: fixed;
   top: 0;
   right: 0;
-  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   padding: var(--size-gap) var(--size-gutter);
 
   grid-template-columns: 120px 1fr min-content min-content;
