--- a/src/components/cart.module.css
+++ b/src/components/cart.module.css
@@ -31,7 +31,7 @@
   display: flex;
   flex-direction: column;
   align-items: stretch;
-  padding: 0 var(--size-gutter-raw);
+  padding: 30px var(--size-gutter-raw);
 }
 
 .totals,
