--- a/src/components/search-page.module.css
+++ b/src/components/search-page.module.css
@@ -47,7 +47,7 @@
   padding: 0 var(--size-gutter-raw);
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .filterWrap {
     padding: 0;
     padding-right: var(--space-xl);
@@ -210,7 +210,7 @@
   padding-right: var(--size-gutter-raw);
 }
 
-@media (min-width: 1024px) {
+@media (min-width: 768px) {
   .filterTitle {
     display: none;
   }
@@ -231,6 +231,7 @@
     /* Visually hidden */
     width: auto;
     height: auto;
+    overflow: visible;
   }
 
   .sortIcon {
