--- a/src/components/translated-products.module.css
+++ b/src/components/translated-products.module.css
@@ -12,7 +12,7 @@
   grid-template-columns: min-content 1fr auto;
   grid-template-rows: min-content auto;
   grid-template-areas:
-    "filters title sort"
+    "title title sort"
     "filters products products";
 }
 
