replace color variables with blue

--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -10,8 +10,8 @@
   --grey-90: #232129;
   --grey-50: #78757a;
   --green-80: #088413;
-  --orange: #ff6b00;
-  --compliment: #ff8933;
+  --orange: #302B83;
+  --compliment: #929BC6;
   --light-bg: #f9f9f9;
   --orange-50-rgb: 255, 107, 0;
   --green-50-rgb: 55, 182, 53;
